5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4165/executions/1618_2928.log
== TEST (2019-04-02 10:08:26) 
-- CODE:
Mg = (" insira a massa do peixe grande ")
Vg = (" insira a velocidade do peixe grande ")
Mp = (" insira a massa do peixe pequeno ")
Vp = (" insira a velocidade do peixe pequeno ")
Vf = ((Mg * Vg) - (Mp * Vp)) / (Mg + Mp)
print( Vf )
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    Vf = ((Mg * Vg) - (Mp * Vp)) / (Mg + Mp)
TypeError: can't multiply sequence by non-int of type 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:09:42) 
-- CODE:
Mg = int(input(" insira a massa do peixe grande ")
Vg = int(input(" insira a velocidade do peixe grande ")
Mp = int(input(" insira a massa do peixe pequeno ")
Vp = int(input(" insira a velocidade do peixe pequeno ")
Vf = ((Mg * Vg) - (Mp * Vp)) / (Mg + Mp)
print( Vf )
-- ERROR:
File "XXXX", line 2
    Vg = int(input()
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:10:40) 
-- CODE:
Mg = int(input(" insira a massa do peixe grande ")
Vg = int(input(" insira a velocidade do peixe grande ")
Mp = int(input(" insira a massa do peixe pequeno ")
Vp = int(input(" insira a velocidade do peixe pequeno ")
Vf = ((Mg * Vg) - (Mp * Vp))//(Mg + Mp)
print( Vf )
-- ERROR:
File "XXXX", line 2
    Vg = int(input()
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:11:37) 
-- CODE:
Mg = int(input(" insira a massa do peixe grande ")
Vg = int(input(" insira a velocidade do peixe grande ")
Mp = int(input(" insira a massa do peixe pequeno ")
Vp = int(input(" insira a velocidade do peixe pequeno ")
Vf = ((Mg * Vg) - (Mp * Vp))/(Mg + Mp)
print( Vf )
-- ERROR:
File "XXXX", line 2
    Vg = int(input()
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:13:52) 
-- CODE:
Mg = int(input(" insira a massa do peixe grande ")
Vg = int(input(" insira a velocidade do peixe grande "))
Mp = int(input(" insira a massa do peixe pequeno ")
Vp = int(input(" insira a velocidade do peixe pequeno ")
Vf = ((Mg * Vg) - (Mp * Vp))/(Mg + Mp)
print( Vf )
-- ERROR:
File "XXXX", line 2
    Vg = int(input())
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:14:16) 
-- CODE:
Mg = int(input(" insira a massa do peixe grande ")
Vg = int(input("insira a velocidade do peixe grande"))
Mp = int(input(" insira a massa do peixe pequeno ")
Vp = int(input(" insira a velocidade do peixe pequeno ")
Vf = ((Mg * Vg) - (Mp * Vp))/(Mg + Mp)
print( Vf )
-- ERROR:
File "XXXX", line 2
    Vg = int(input())
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:27:13) 
-- CODE:
Mg = int(input(" insira a massa do peixe grande ")
Vg = int(input(" insira a velocidade do peixe grande ")
Mp = int(input(" insira a massa do peixe pequeno ")
Vp = int(input(" insira a velocidade do peixe pequeno ")
Vf = ((Mg * Vg) - (Mp * Vp))/(Mg + Mp)
print( Vf )
-- ERROR:
File "XXXX", line 2
    Vg = int(input()
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:27:19) 
-- CODE:
Mg = int(input(" insira a massa do peixe grande ")
Vg = int(input(" insira a velocidade do peixe grande ")
Mp = int(input(" insira a massa do peixe pequeno ")
Vp = int(input(" insira a velocidade do peixe pequeno ")
Vf = ((Mg * Vg) - (Mp * Vp))/(Mg + Mp)
print( Vf )
-- ERROR:
File "XXXX", line 2
    Vg = int(input()
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:29:04) 
-- CODE:
Mg = int(input(" insira a massa do peixe grande "))
Vg = int(input(" insira a velocidade do peixe grande "))
Mp = int(input(" insira a massa do peixe pequeno "))
Vp = int(input(" insira a velocidade do peixe pequeno "))
Vf = ((Mg * Vg) - (Mp * Vp))/(Mg + Mp)
print( Vf )
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    Mg = int(input())
ValueError: invalid literal for int() with base 10: '9.8'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:29:51) 
-- CODE:
Mg = float(input(" insira a massa do peixe grande "))
Vg = float(input(" insira a velocidade do peixe grande "))
Mp = float(input(" insira a massa do peixe pequeno "))
Vp = float(input(" insira a velocidade do peixe pequeno "))
Vf = ((Mg * Vg) - (Mp * Vp))/(Mg + Mp)
print( Vf )
-- OUTPUT:
4.484615384615385
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 10:30:11) 
-- CODE:
Mg = float(input(" insira a massa do peixe grande "))
Vg = float(input(" insira a velocidade do peixe grande "))
Mp = float(input(" insira a massa do peixe pequeno "))
Vp = float(input(" insira a velocidade do peixe pequeno "))
Vf = ((Mg * Vg) - (Mp * Vp))/(Mg + Mp)
print( Vf )
-- EXECUTION TIME:
0.130681
-- TEST CASE 1:
---- input:
9.8
7.6
4.5
2.3
---- correct output:
4.484615384615385
---- user output:
4.484615384615385
-- TEST CASE 2:
---- input:
1000.0
2000.0
500.0
600.0
---- correct output:
1133.3333333333333
---- user output:
1133.3333333333333
-- TEST CASE 3:
---- input:
20.0
10.0
5.0
1.0
---- correct output:
7.8
---- user output:
7.8
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
